[package]
name = "physics"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.2"
cgmath = { version = "0.18.0", features = ["swizzle", "serde"] }
eframe = { version = "0.21.3", features = ["wgpu", "persistence"] }
encase = { version = "0.4.1", features = ["cgmath"] }
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
